feat: finish first page

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Catalonia</title>
   </head>
   <body>
+    <root id="root"></root>
     <img class="menu-bg" src="src/assets/menu-bg.svg" loading="lazy" />
     <nav class="menu">
       <ul class="menu-list">
-        <li class="menu-item">О Каталонии</li>
+        <li class="menu-item">О Каталонии</a></li>
         <li class="menu-item">Вебинары</li>
         <li class="menu-item">Карта</li>
         <li class="menu-item">Кому подойдет</li>
@@ -30,19 +31,19 @@
         <p class="header__text">10 туроператоров поделились яркими рекомендациями и личными впечатлениями, чтобы вы смогли без труда собрать удивительный отдых для ваших туристов</p>
       </div>
       <button class="circle header">
-        <img class="circle-text header" src="src/assets/img/header_circle.svg" />
-        <img class="circle-arrow header" src="./src/assets/header-arrow.svg" />
+        <img class="circle-text header" src="src/assets/img/header_circle.svg" loading="lazy" />
+        <img class="circle-arrow header" src="./src/assets/header-arrow.svg" loading="lazy" />
       </button>
     </header>
 
     <section class="about">
       <div class="about__what-wait">
         <button class="circle about">
-          <img class="circle-text" src="src/assets/img/about_circle.svg" />
-          <img class="circle-arrow" src="src/assets/img/about-arrow.svg" />
+          <img class="circle-text" src="src/assets/img/about_circle.svg" loading="lazy" />
+          <img class="circle-arrow" src="src/assets/img/about-arrow.svg" loading="lazy" />
         </button>
         <div class="about__what-wait-image">
-          <img class="about__what-wait-image-picture" src="src/assets/img/about1.png" />
+          <img class="about__what-wait-image-picture" src="src/assets/img/about1.png" loading="lazy" />
           <div class="about__what-wait-container">
             <div class="about__what-wait-description">
               <p class="h1">1</p>
@@ -52,7 +53,7 @@
               </p>
             </div>
 
-            <img class="about__what-wait-image-bottom" src="src/assets/img/about_mask_text.svg" />
+            <img class="about__what-wait-image-bottom" src="src/assets/img/about_mask_text.svg" loading="lazy" />
           </div>
         </div>
         <div class="about__what-wait-text">
@@ -68,17 +69,17 @@
           </ul>
           <button class="about__what-wait-button">
             <span class="about__what-wait-button-text">Правила участия</span>
-            <img class="about__what-wait-button-arrow" src="src/assets/img/about_rule-arrow.svg" />
+            <img class="about__what-wait-button-arrow" src="src/assets/img/about_rule-arrow.svg" loading="lazy" />
           </button>
         </div>
-        <img class="about-bg1" src="/src/assets/about-bg1.svg" />
+        <img class="about-bg1" src="/src/assets/about-bg1.svg" loading="lazy" />
       </div>
 
       <div class="about__main">
         <div class="about__info">
           <p class="h2">Самое главное</p>
           <p class="about__description">Изучайте базовую информацию о Каталонии: от визы и транспортной доступности до мер безопасности во время пандемии.</p>
-          <button class="about__button">Узнать</button>
+          <a class="link" href="src/public/secondPage.html"><button class="about__button">Узнать</button></a>
         </div>
         <div class="about__quote">
           <img class="about__quote-img-michail" src="/src/assets/img/Michail.png" />
@@ -202,22 +203,22 @@
 
     <section class="regions">
       <div class="regions__maps">
-        <img class="regions__bg" src="src/assets/img/regions_map1.svg" />
+        <img class="regions__bg" src="src/assets/img/regions_map1.svg" loading="lazy"/>
         <div class="regions__flys">
           <div class="regions__fly-1">
-            <img src="src/assets/img/regiona_fly.svg" />
+            <img src="src/assets/img/regiona_fly.svg" loading="lazy"/>
             <p>Льейда</p>
           </div>
           <div class="regions__fly-2">
-            <img src="src/assets/img/regiona_fly.svg" />
+            <img src="src/assets/img/regiona_fly.svg" loading="lazy"/>
             <p>Жирона</p>
           </div>
           <div class="regions__fly-3">
-            <img src="src/assets/img/regiona_fly.svg" />
+            <img src="src/assets/img/regiona_fly.svg" loading="lazy"/>
             <p>Реус</p>
           </div>
           <div class="regions__fly-4">
-            <img src="src/assets/img/regiona_fly.svg" />
+            <img src="src/assets/img/regiona_fly.svg" loading="lazy"/>
             <p>Барселона</p>
           </div>
         </div>
@@ -272,14 +273,14 @@
           </div>
         </div>
         <div class="regions__hint">
-          <img class="regions__hint-arrow" src="src/assets/img/regions_hint-arrow.svg" />
+          <img class="regions__hint-arrow" src="src/assets/img/regions_hint-arrow.svg" loading="lazy"/>
           <p class="regions__hint-text">Кликай и изучай возможности</p>
         </div>
       </div>
     </section>
 
     <section class="everybody">
-      <img class="everybody-bg" src="/src/assets/everebody.svg" />
+      <img class="everybody-bg" src="/src/assets/everebody.svg" loading="lazy"/>
       <div class="everybody__title">
         <h2 class="h2">Каталония — для всех</h2>
         <p class="everybody-description">Руководители направления крупных туроператоров уже поделились своими фишками для отличного отдыха. Соберите мозаику отдыха, которая подойдет именно вашему туристу!</p>
@@ -293,8 +294,8 @@
               <button class="everybody__family-button">Узнать</button>
             </div>
           </div>
-          <img class="everybody__images__family-rest-1" src="src/assets/img/family-rest.png" />
-          <img class="everybody__images__family-rest-2" src="src/assets/img/family-rest-text2.png" />
+          <img class="everybody__images__family-rest-1" src="src/assets/img/family-rest.png" loading="lazy"/>
+          <img class="everybody__images__family-rest-2" src="src/assets/img/family-rest-text2.png" loading="lazy"/>
           <svg class="everybody__images__family-rest-3" width="432" height="317" viewBox="0 0 432 317" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path class="everybody__images__family-rest-3-svg" d="M130.19 -0.00926112L15.0733 14.6254L0.859788 205.313L203.904 309.601L401.686 316.57L431.665 6.96619L288.58 14.6249L130.19 -0.00926112Z" fill="#FEE629" />
           </svg>
@@ -308,8 +309,8 @@
               <button class="everybody__active-button">Узнать</button>
             </div>
           </div>
-          <img class="everybody__images__active-rest-1" src="src/assets/img/active-rest.png" />
-          <img class="everybody__images__active-rest-2" src="src/assets/img/active-rest-text2.png" />
+          <img class="everybody__images__active-rest-1" src="src/assets/img/active-rest.png" loading="lazy"/>
+          <img class="everybody__images__active-rest-2" src="src/assets/img/active-rest-text2.png" loading="lazy"/>
           <svg class="everybody__images__active-rest-3" width="433" height="333" viewBox="0 0 433 333" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path class="everybody__images__active-rest-3-svg" d="M89.0941 17.3751L13.0817 0.358301L0.0350075 221.246L202.994 325.561L400.69 332.536L432.649 6.87302L387.142 17.3814L220.115 6.86853L89.0941 17.3751Z" fill="#E33F00" />
           </svg>
@@ -323,8 +324,8 @@
               <button class="everybody__new-button">Узнать</button>
             </div>
           </div>
-          <img class="everybody__images__new-rest-1" src="src/assets/img/new-rest.png" />
-          <img class="everybody__images__new-rest-2" src="src/assets/img/new-rest-text2.png" />
+          <img class="everybody__images__new-rest-1" src="src/assets/img/new-rest.png" loading="lazy"/>
+          <img class="everybody__images__new-rest-2" src="src/assets/img/new-rest-text2.png" loading="lazy"/>
           <svg class="everybody__images__new-rest-3" width="434" height="327" viewBox="0 0 434 327" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path class="everybody__images__new-rest-3-svg" d="M66.7905 19.5868L0.762173 35.1674L0.757419 215.006L203.613 319.259L401.214 326.221L433.173 0.71975L409.18 11.0744L329.706 0.722484L150.263 29.0883L66.7905 19.5868Z" fill="#73CCE3"/>
           </svg>
@@ -334,39 +335,102 @@
     </section>
 
     <section class="features">
+      <img class="bg bg_features" src="/src/assets/img/features/bg.svg" loading="lazy" />
       <section class="features__tour">
-        <h2 class="h2"></h2>
-        <p class="features__tour-description"></p>
-        <button></button>
+        <div class="features__product">
+          <div class="features__content-product">
+            <h2 class="h2 features__title">
+              Гранд Тур — <br />
+              новый турпродукт
+            </h2>
+            <p class="features__description">
+              Маршрут, вдохновленный великими путешественниками, <br />
+              чтобы увидеть то, чего не видели еще сами каталонцы.
+            </p>
+            <button class="features__button">Изучить</button>
+          </div>
+          <div class="features__image-wrapper">
+            <img class="features__image-1" src="/src/assets/img/features/image1.png" loading="lazy" />
+          </div>
+        </div>
       </section>
 
       <section class="features__work">
-        <h2 class="h2"></h2>
-        <p class="features__work-description"></p>
-        <button></button>
+        <div class="features__product">
+          <div class="features__image-wrapper">
+            <img class="features__image-2" src="/src/assets/img/features/image2.png" loading="lazy" />
+          </div>
+          <div class="features__content-work">
+            <h2 class="h2 features__title">
+              С кем работать <br />
+              по направлению
+            </h2>
+            <p class="features__description">
+              Знакомьтесь с компаниями, которые давно <br />
+              и успешно работают с Каталонией.
+            </p>
+            <button class="features__button">Узнать</button>
+          </div>
+        </div>
       </section>
 
       <section class="features__skills">
-        <h2 class="h2"></h2>
-        <p class="features__skills-description"></p>
-        <button></button>
+        <div class="features__product">
+          <div class="features__content-skills">
+            <h2 class="h2 features__title">Проверяйте знания</h2>
+            <p class="features__description-skills">
+              Изучили Каталонию от А до Я? Отвечайте на вопросы <br />
+              тестирования и получайте диплом эксперта <br />
+              по направлению и <b>400 баллов Loyalty.</b>
+            </p>
+            <button class="features__button">Пройти тест</button>
+          </div>
+          <div class="features__image-wrapper">
+            <img class="features__image-3" src="/src/assets/img/features/image3.png" loading="lazy" />
+          </div>
+        </div>
       </section>
     </section>
 
     <section class="ranking">
-      <p class="h2"></p>
-      <p class="ranking-description"></p>
-      <div class="ranking__table"></div>
+      <p class="h2">Рейтинг участников</p>
+      <p class="ranking-description">Узнайте, сколько баллов вам осталось набрать, чтобы выиграть призы</p>
+      <div class="ranking__table">
+        <img class="ranking__bg" src="src/assets/img/ranking/bg.svg" />
+        <div class="ranking__info">
+          <div class="ranking__title">Ваш результат:</div>
+          <div class="ranking__description">У вас пока нет баллов.<br><a href="#" class="ranking__description-link">Как получить?</a></div>
+        </div>
+        <div class="ranking__leaderboard">
+          <ul class="ranking__leaderboard-ul">
+            <li class="ranking__leaderboard-li">
+              <span class="ranking__leaderboard-rank">01</span>
+              <span class="ranking__leaderboard-name">Александр Константинов</span>
+              <span class="ranking__leaderboard-company">ООО Эйпл-травел, Москва</span>
+              <span class="ranking__leaderboard-score">1700</span>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="ranking__pagination">
+        <img class="ranking__bg" src="src/assets/img/ranking/pagination-bg.svg" />
+      </div>
     </section>
 
-    <section class="feedback"></section>
-
     <footer class="footer">
-      <h2 class="h2"></h2>
-      <p class="footer-description"></p>
-      <div class="footer__creator"></div>
+      <img class="footer-bg" src="src/assets/img/footer/footer-bg.svg" />
+      <div class="footer__fedback">
+        <p class="footer__fedback-title">Уважаемые участники!</p>
+        <p class="footer__fedback-description">Мы будем рады ответить на любые вопросы о проекте. Пишите нам на почту: <a href="mailto:academy@profi.travel">academy@profi.travel</a></p>
+      </div>
+      <div class="footer__support">Проект разработан при поддержке Национального совета Каталонии по туризму</div>
+      <div class="footer__creator">
+        <p class="footer__creator-name">profi</p>
+        <p class="footer__creator-name plus">+</p>
+        <p class="footer__creator-name">travel</p>
+        <p class="footer__creator-info">Проект компании ООО «Профи Трэвел» 2020</p>
+      </div>
     </footer>
-
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
