feat: add test page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li class="menu-item"><a href="#everybody">Кому подойдет</a></li>
           <li class="menu-item"><a href="#features">Гранд Тур</a></li>
           <li class="menu-item"><a href="#ranking">Бизнес-партнеры</a></li>
-          <li class="menu-item"><a href="">Тест</a></li>
+          <li class="menu-item"><a href="/src/public/testPage.html">Тест</a></li>
         </ul>
       </nav>
       <header class="header">
@@ -86,7 +86,7 @@
           <div class="about__info">
             <p class="h2">Самое главное</p>
             <p class="about__description">Изучайте базовую информацию о Каталонии: от визы и транспортной доступности до мер безопасности во время пандемии.</p>
-            <a class="link" href="src/public/secondPage.html"><button class="about__button">Узнать</button></a>
+            <a class="link" href="/src/public/secondPage.html"><button class="about__button">Узнать</button></a>
           </div>
           <div class="about__quote">
             <img class="about__quote-img-michail" src="/src/assets/img/Michail.png" />
