--- a/src/public/secondPage.html
+++ b/src/public/secondPage.html
@@ -8,98 +8,101 @@
   </head>
   <body>
     <div class="second-page-wrapper">
-    <img class="menu-bg" src="/src/assets/menu-bg.svg" loading="lazy" />
-    <nav class="menu">
-      <ul class="menu-list">
-        <li class="menu-item">О Каталонии</a></li>
-        <li class="menu-item">Вебинары</li>
-        <li class="menu-item">Карта</li>
-        <li class="menu-item">Кому подойдет</li>
-        <li class="menu-item">Гранд Тур</li>
-        <li class="menu-item">Бизнес-партнеры</li>
-        <li class="menu-item">Тест</li>
-      </ul>
-    </nav>
-    <header class="header second-header">
-      <img class="header-bg" src="/src/assets/img/secondpage/bg-header.svg" loading="lazy" />
-      <img class="header-img" src="/src/assets/img/secondpage/header-image.png" loading="lazy" />
-      <div class="header-intro">
-        <h1 class="header__title">
-          Самое главное <br>о Каталонии
-        </h1>
-        <p class="header__text">Каждый уникальный узор мозаики начинается с крепкой основы, поэтому прежде чем предложить туристам неповторимый отдых, изучите базовую информацию о направлении и рекомендации от Каталонского Агентства по Туризму</p>
-      </div>
-      <button class="second-circle circle">
-        <img class="circle-text header" src="/src/assets/img/header_circle.svg" loading="lazy" />
-        <img class="circle-arrow header" src="/src/assets/header-arrow.svg" loading="lazy" />
-      </button>
-    </header>
-
-    <section class="section-1">
-      <img class="header-bg" src="/src/assets/img/secondpage/bg1.svg" loading="lazy" />
-      <p class="section-1__text"><b>Каталония</b> — знаменитое автономное сообщество Испании, которое разделено на <b>4 провинции — Барселону, Таррагону, Жерону и Льейду</b>, — расположилось на северо-востоке Пиренейского полуострова. Эта старинная область Испании с насыщенным историческим прошлым сегодня славится своей национальной кухней, городскими праздниками и фестивалями, художниками с мировыми именами и, конечно, побережьем с нежным золотым песком и кристально чистым Средиземным морем.</p>
-    </section>
-
-    <section class="section-2">
-      <img class="header-bg" src="/src/assets/img/secondpage/bg2.svg" loading="lazy" />
-      <div class="qoute-wrapper">
-        <div class="qoute">
-          <img class="img-michail" src="/src/assets/img/Michail.png" />
-          <p class="section-2__quote-text-bottom"><b>Михаил Сидоров</b>,<br>
-            представитель Каталонского<br>
-            Агентства по Туризму
-          </p>      
+      <img class="menu-bg" src="/src/assets/menu-bg.svg" loading="lazy" />
+      <nav class="menu">
+        <ul class="menu-list">
+          <li class="menu-item"><a href="index.html#about">О Каталонии</a></li>
+          <li class="menu-item"><a href="index.html##learning">Вебинары</a></li>
+          <li class="menu-item"><a href="index.html##regions">Карта</a></li>
+          <li class="menu-item"><a href="index.html##everybody">Кому подойдет</a></li>
+          <li class="menu-item"><a href="index.html##features">Гранд Тур</a></li>
+          <li class="menu-item"><a href="index.html##ranking">Бизнес-партнеры</a></li>
+          <li class="menu-item"><a href="/src/public/testPage.html">Тест</a></li>
+        </ul>
+      </nav>
+      <header class="header second-header">
+        <img class="header-bg" src="/src/assets/img/secondpage/bg-header.svg" loading="lazy" />
+        <img class="header-img" src="/src/assets/img/secondpage/header-image.png" loading="lazy" />
+        <div class="header-intro">
+          <h1 class="header__title">Самое главное <br />о Каталонии</h1>
+          <p class="header__text">Каждый уникальный узор мозаики начинается с крепкой основы, поэтому прежде чем предложить туристам неповторимый отдых, изучите базовую информацию о направлении и рекомендации от Каталонского Агентства по Туризму</p>
         </div>
-        <div class="text-with-quote">
-          <p class="quote-mark open">«</p>
-          <p class="section-2__text">Если вы хотите открыть для себя настоящую Каталонию, тогда смело отправляйтесь в Рупит. Вы переместитесь в эпоху Средневековья,<br>
-            где время как-будто остановилось. Город из камня, основные постройки датированы 16-17 века. Они сохранились в первозданном виде. Пройдите по висячему мосту, загляните в местную кондитерскую
-            и отведайте круассан из слоенного теста. Обязательно загляните в мясную лавку и прикупите фуэт, ведь местные колбасы славятся на всю Каталонию. Спуститесь к водопаду и устройте себе пикник на отвесной скале, и если вам повезет, перед вами орлы «покажут танце любви»</p>
-          <p class="quote-mark close">»</p>
-        </div>
-      </div>
-    </section>
+        <a href="#section-1">
+          <button class="second-circle circle">
+            <img class="circle-text header" src="/src/assets/img/header_circle.svg" loading="lazy" />
+            <img class="circle-arrow header" src="/src/assets/header-arrow.svg" loading="lazy" />
+          </button>
+        </a>
+      </header>
 
-    <section class="section-3">
-      <img class="header-bg" src="/src/assets/img/secondpage/bg3.svg" loading="lazy" />
-      <p class="section-1__text">Каталония — знаменитое автономное сообщество Испании, которое разделено на 4 провинции — Барселону, Таррагону, Жерону и Льейду, — расположилось на северо-востоке Пиренейского полуострова. Эта старинная область Испании с насыщенным историческим прошлым сегодня славится своей национальной кухней, городскими праздниками и фестивалями, художниками с мировыми именами и, конечно, побережьем с нежным золотым песком и кристально чистым Средиземным морем.</p>
-    </section>
+      <section id="section-1" class="section-1">
+        <img class="header-bg" src="/src/assets/img/secondpage/bg1.svg" loading="lazy" />
+        <p class="section-1__text"><b>Каталония</b> — знаменитое автономное сообщество Испании, которое разделено на <b>4 провинции — Барселону, Таррагону, Жерону и Льейду</b>, — расположилось на северо-востоке Пиренейского полуострова. Эта старинная область Испании с насыщенным историческим прошлым сегодня славится своей национальной кухней, городскими праздниками и фестивалями, художниками с мировыми именами и, конечно, побережьем с нежным золотым песком и кристально чистым Средиземным морем.</p>
+      </section>
 
-    <section class="section-4">
-      <img class="header-bg" src="/src/assets/img/secondpage/bg4.svg" loading="lazy" />
-      <div class="qoute-wrapper second-wrapper">
-        <div class="qoute">
-          <img class="img-michail" src="/src/assets/img/Michail.png" />
-          <p class="section-2__quote-text-bottom"><b>Михаил Сидоров</b>,<br>
-            представитель Каталонского<br>
-            Агентства по Туризму
-          </p>      
-        </div>
-        <div class="text-with-quote">
-          <p class="quote-mark open">«</p>
-          <div class="section-2__text-wrapper">
-            <p class="section-2__text">Аэропорт Барселоны Эль Прат имеет два терминала, между которыми ходит бесплатный автобус. При этом, имейте ввиду, что если от терминала 1 до терминала 2 ехать всего 5 минут, то в обратную сторону дорога займет не менее 20.</p>
-            <p class="section-2__text-2">Аэропорт огромный, в каждом терминале большое количество магазинов. в том числе самых известных брендов, ресторанные дворики, где доминирует Макдональдс, для удобства пассажиров обустроены движущиеся дорожки. Если выход на посадку один из самых отдаленных, то дорога до него достигает километра, если пользоваться дорожками, то скорость существенно возрастает</p>
+      <section class="section-2">
+        <img class="header-bg" src="/src/assets/img/secondpage/bg2.svg" loading="lazy" />
+        <div class="qoute-wrapper">
+          <div class="qoute">
+            <img class="img-michail" src="/src/assets/img/Michail.png" />
+            <p class="section-2__quote-text-bottom">
+              <b>Михаил Сидоров</b>,<br />
+              представитель Каталонского<br />
+              Агентства по Туризму
+            </p>
           </div>
-          <p class="quote-mark close">»</p>
+          <div class="text-with-quote">
+            <p class="quote-mark open">«</p>
+            <p class="section-2__text">
+              Если вы хотите открыть для себя настоящую Каталонию, тогда смело отправляйтесь в Рупит. Вы переместитесь в эпоху Средневековья,<br />
+              где время как-будто остановилось. Город из камня, основные постройки датированы 16-17 века. Они сохранились в первозданном виде. Пройдите по висячему мосту, загляните в местную кондитерскую и отведайте круассан из слоенного теста. Обязательно загляните в мясную лавку и прикупите фуэт, ведь местные колбасы славятся на всю Каталонию. Спуститесь к водопаду и устройте себе пикник на отвесной скале, и если вам повезет, перед вами орлы «покажут танце любви»
+            </p>
+            <p class="quote-mark close">»</p>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <footer class="footer">
-      <img class="footer-bg" src="/src/assets/img/secondpage/footer-bg.svg" />
-      <div class="footer__fedback">
-        <p class="footer__fedback-title">Уважаемые участники!</p>
-        <p class="footer__fedback-description">Мы будем рады ответить на любые вопросы о проекте. Пишите нам на почту: <a href="mailto:academy@profi.travel">academy@profi.travel</a></p>
-      </div>
-      <div class="footer__support">Проект разработан при поддержке Национального совета Каталонии по туризму</div>
-      <div class="footer__creator">
-        <p class="footer__creator-name">profi</p>
-        <p class="footer__creator-name plus">+</p>
-        <p class="footer__creator-name">travel</p>
-        <p class="footer__creator-info">Проект компании ООО «Профи Трэвел» 2020</p>
-      </div>
-    </footer>
+      <section class="section-3">
+        <img class="header-bg" src="/src/assets/img/secondpage/bg3.svg" loading="lazy" />
+        <p class="section-1__text">Каталония — знаменитое автономное сообщество Испании, которое разделено на 4 провинции — Барселону, Таррагону, Жерону и Льейду, — расположилось на северо-востоке Пиренейского полуострова. Эта старинная область Испании с насыщенным историческим прошлым сегодня славится своей национальной кухней, городскими праздниками и фестивалями, художниками с мировыми именами и, конечно, побережьем с нежным золотым песком и кристально чистым Средиземным морем.</p>
+      </section>
+
+      <section class="section-4">
+        <img class="header-bg" src="/src/assets/img/secondpage/bg4.svg" loading="lazy" />
+        <div class="qoute-wrapper second-wrapper">
+          <div class="qoute">
+            <img class="img-michail" src="/src/assets/img/Michail.png" />
+            <p class="section-2__quote-text-bottom">
+              <b>Михаил Сидоров</b>,<br />
+              представитель Каталонского<br />
+              Агентства по Туризму
+            </p>
+          </div>
+          <div class="text-with-quote">
+            <p class="quote-mark open">«</p>
+            <div class="section-2__text-wrapper">
+              <p class="section-2__text">Аэропорт Барселоны Эль Прат имеет два терминала, между которыми ходит бесплатный автобус. При этом, имейте ввиду, что если от терминала 1 до терминала 2 ехать всего 5 минут, то в обратную сторону дорога займет не менее 20.</p>
+              <p class="section-2__text-2">Аэропорт огромный, в каждом терминале большое количество магазинов. в том числе самых известных брендов, ресторанные дворики, где доминирует Макдональдс, для удобства пассажиров обустроены движущиеся дорожки. Если выход на посадку один из самых отдаленных, то дорога до него достигает километра, если пользоваться дорожками, то скорость существенно возрастает</p>
+            </div>
+            <p class="quote-mark close">»</p>
+          </div>
+        </div>
+      </section>
+
+      <footer class="footer">
+        <img class="footer-bg" src="/src/assets/img/secondpage/footer-bg.svg" />
+        <div class="footer__fedback">
+          <p class="footer__fedback-title">Уважаемые участники!</p>
+          <p class="footer__fedback-description">Мы будем рады ответить на любые вопросы о проекте. Пишите нам на почту: <a href="mailto:academy@profi.travel">academy@profi.travel</a></p>
+        </div>
+        <div class="footer__support">Проект разработан при поддержке Национального совета Каталонии по туризму</div>
+        <div class="footer__creator">
+          <p class="footer__creator-name">profi</p>
+          <p class="footer__creator-name plus">+</p>
+          <p class="footer__creator-name">travel</p>
+          <p class="footer__creator-info">Проект компании ООО «Профи Трэвел» 2020</p>
+        </div>
+      </footer>
     </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
