feat: add rules modal

--- a/index.html
+++ b/index.html
@@ -79,6 +79,36 @@
             </button>
           </div>
           <img class="about-bg1" src="/src/assets/about-bg1.svg" loading="lazy" />
+          <div class="rules-modal">
+            <svg class="rules-close-button" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M1.20711 0L0.5 0.707107L12.5209 12.728L0.500042 24.7488L1.20715 25.4559L13.228 13.4351L25.2487 25.4558L25.9558 24.7487L13.9351 12.728L25.9559 0.707182L25.2488 7.53403e-05L13.228 12.0209L1.20711 0Z" fill="black" />
+            </svg>
+            <div class="rules-container">
+              <p class="rules-title">Правила участия в проекте</p>
+              <div>
+                <p class="rules-subtitle">1. Определения и описание проекта</p>
+                <div class="rules__text">
+                  <p>1.1. Проект «Индонезия — туризм в новой реальности» (далее –– Онлайн-проект) проходит на портале Profi.Travel на домене https://indonesia.profi.travel с 28.09.2020 по 28.12.2020 включительно.</p>
+                  <p>1.2. Организаторами проекта (далее –– Организаторы) являются медиахолдинг Profi.Travel и The Ministry of Tourism and Creative Economy of The Republic of Indonesia.</p>
+                  <p>1.3. Участники Онлайн-проекта (далее –– Участники) — это пользователи, которые бесплатно могут принимать участие во всех обучающих мероприятиях, размещенных на https://indonesia.profi.travel.</p>
+                  <div>
+                    1.4. В Онлайн-проект включены мероприятия:
+                    <ul>
+                      <li>два вебинара,</li>
+                      <li>итоговое тестирование.</li>
+                    </ul>
+                  </div>
+                  <p>1.5. Участники получают баллы за свою активность на мероприятиях, которые зачисляются в рейтинг Онлайн-проекта на странице https://indonesia.profi.travel.</p>
+                  <p>1.6. Баллы в рейтинг Онлайн-проекта начисляются автоматически согласно фиксированному прайсу (см. подпункт 2.1).</p>
+                  <p>1.7. Среди Участников, которые наберут 1 000 баллов в рейтинге, будут разыграны призы от The Ministry of Tourism and Creative Economy of The Republic of Indonesia (см. п. 3).</p>
+                  <p></p>
+                  <p></p>
+                  <p></p>
+                  <p></p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="about__main">
