feat: add map points

--- a/index.html
+++ b/index.html
@@ -258,6 +258,24 @@
               <p>Барселона</p>
             </div>
           </div>
+          <div class="regions__points">
+            <div class="map-point-1 map-point">
+              <div class="point-bg">
+                <p class="map-point-city">Caldes de Malavella</p>
+              </div>
+              <svg class="map-point-arrow" width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0.39818 1.29409L5.41953 17.6135C5.66044 18.3964 6.68897 18.5735 7.17777 17.9161L19.3127 1.5967C19.8033 0.936958 19.3324 0 18.5102 0H1.35396C0.681154 0 0.200318 0.651032 0.39818 1.29409Z" fill="#E33F00" />
+              </svg>
+            </div>
+            <div class="map-point-2 map-point">
+              <div class="point-bg">
+                <p class="map-point-city">Santa Coloma de Farners</p>
+              </div>
+              <svg class="map-point-arrow" width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0.39818 1.29409L5.41953 17.6135C5.66044 18.3964 6.68897 18.5735 7.17777 17.9161L19.3127 1.5967C19.8033 0.936958 19.3324 0 18.5102 0H1.35396C0.681154 0 0.200318 0.651032 0.39818 1.29409Z" fill="#E33F00" />
+              </svg>
+            </div>
+          </div>
 
           <svg class="regions__map" viewBox="0 0 534 548" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -318,13 +336,13 @@
                 <svg class="regions__modal-bullet" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M7 1.44338C8.54701 0.550212 10.453 0.550212 12 1.44338L16.0933 3.80662C17.6403 4.69979 18.5933 6.35042 18.5933 8.13675V12.8632C18.5933 14.6496 17.6403 16.3002 16.0933 17.1934L12 19.5566C10.453 20.4498 8.54701 20.4498 7 19.5566L2.90673 17.1934C1.35973 16.3002 0.406734 14.6496 0.406734 12.8632V8.13675C0.406734 6.35042 1.35973 4.69979 2.90673 3.80662L7 1.44338Z" fill="#E33F00" />
                 </svg>
-                <p>Caldes de Malavella</p>
+                <p class="modal-city-1">Caldes de Malavella</p>
               </button>
               <button class="regions__modal-text-container">
                 <svg class="regions__modal-bullet" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M7 1.44338C8.54701 0.550212 10.453 0.550212 12 1.44338L16.0933 3.80662C17.6403 4.69979 18.5933 6.35042 18.5933 8.13675V12.8632C18.5933 14.6496 17.6403 16.3002 16.0933 17.1934L12 19.5566C10.453 20.4498 8.54701 20.4498 7 19.5566L2.90673 17.1934C1.35973 16.3002 0.406734 14.6496 0.406734 12.8632V8.13675C0.406734 6.35042 1.35973 4.69979 2.90673 3.80662L7 1.44338Z" fill="#E33F00" />
                 </svg>
-                <p>Santa Coloma de Farners</p>
+                <p class="modal-city-2">Santa Coloma de Farners</p>
               </button>
               <button class="regions__modal-text-container">
                 <svg class="regions__modal-bullet" width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
