fix: slider image size

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="about__info">
             <p class="h2">Самое главное</p>
             <p class="about__description">Изучайте базовую информацию о Каталонии: от визы и транспортной доступности до мер безопасности во время пандемии.</p>
-            <a class="link" href="/src/public/secondPage.html"><button class="about__button">Узнать</button></a>
+            <a class="link" href="./src/public/secondPage.html"><button class="about__button">Узнать</button></a>
           </div>
           <div class="about__quote">
             <img class="about__quote-img-michail" src="/src/assets/img/Michail.png" />
