--- a/src/pages/secondPage.html
+++ b/src/pages/secondPage.html
@@ -17,7 +17,7 @@
           <li class="menu-item"><a href="index.html##everybody">Кому подойдет</a></li>
           <li class="menu-item"><a href="index.html##features">Гранд Тур</a></li>
           <li class="menu-item"><a href="index.html##ranking">Бизнес-партнеры</a></li>
-          <li class="menu-item"><a href="/src/public/testPage.html">Тест</a></li>
+          <li class="menu-item"><a href="/src/pages/testPage.html">Тест</a></li>
         </ul>
       </nav>
       <header class="header second-header">
